--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -50,7 +50,7 @@
 
     </div>
     {% endcomment %}
-    <div class="row notebook-header collapse">
+    <!-- <div class="row notebook-header collapse">
         <div class="small-12 medium-3 large-3 columns ">
             <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button radius tiny" style="margin: 0em 0em 1em;">
                 <i class="fi-plus"></i>
@@ -63,16 +63,9 @@
         <div class="small-12 medium-3 large-3 columns ">
             <input type="text" placeholder="Search">
         </div>
-    </div>
+    </div> -->
     <div class="row notebook-body">
-        <div class="columns small-12 note-cards" >
-            <div class="row">
-                <div class="small-12 columns" id="note-card-cotainer">
-
-                </div>
-            </div>
-        </div>
-        <!--div class="small-12 medium-4 large-3 columns notebook-index">
+        <div class="small-12 medium-4 large-3 columns notebook-index">
             <div class="row">
                 <div class="small-12 columns">
                     {% if request.user.is_authenticated %}
@@ -80,6 +73,7 @@
                     <a href="#" data-reveal-id="newNoteModal" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i>  New Note</a>
                     {% endcomment %}
                     <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i>  New Note</a>
+                    
                     {% endif %}
                 </div>
             </div>
@@ -172,8 +166,12 @@
 
             </div>
         </div>
-        <div class="small-12 medium-8 large-9 columns note-page" >
-        </div-->
+            <div class="small-12 medium-8 large-9 columns note-page" >
+                       {% if notebook_obj %}
+                           {% include "ndf/note_page.html" %}
+                       {% endif %}
+           </div>
+        </div>
     </div>
 </div>
 
@@ -182,216 +180,97 @@
 
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
-{% verbatim %}
-<script id="note-card-temp" type="text/x-handlebars-template">
-    <div class="small-4 columns">
-        <div class="note-card" data-note-id={{id}}>
-            <div class="note-heading">{{name}}</div>
-            <div class="note-summary">{{summary}}</div>
-            <div class="note-info">{{teacher}}&nbsp;&#8226;&nbsp;{{date}}&nbsp;&#8226;&nbsp;{{time}}</div>
-            <div class="note-extra-data">
-                <i class="fa fa-eye"></i>
-                <span>{{views}}</span>
-                <i class="fa fa-smile-o"></i>
-                <span>{{likes}}</span>
-                <i class="fa fa-comment-o"></i>
-                <span>{{comments}}</span>
-            </div>
-            <div class="note-tags">
-                {{#each tags}}
-                <span>
-                    {{this}}
-                </span>
-                {{/each}}
-            </div>
-            <div class="note-actions">
-                <i class="fa fa-trash-o"></i>
-                <span>Delete</span>
-                <i class="fa fa-flag"></i>
-                <span>Report</span>
-            </div>
-        </div>
-    </div>
-</script>
-<script id="note-card-exp-temp" type="text/x-handlebars-template">
-    <div class="small-12 columns">
-        <div class="note-details" data-note-id='note_{{id}}'>
-            <div class="note-heading">{{name}}</div>
-            <div class="note-close">&times;</div>
-            <div class="note-summary">{{noteText}}</div>
-            <div class="note-info">{{teacher}}&nbsp;&#8226;&nbsp;{{date}}&nbsp;&#8226;&nbsp;{{time}}</div>
-            <div class="note-extra-data">
-                <i class="fa fa-eye"></i>
-                <span>{{views}}</span>
-                <i class="fa fa-smile-o"></i>
-                <span>{{likes}}</span>
-                <i class="fa fa-comment-o"></i>
-                <span>{{comments}}</span>
-            </div>
-            <div class="note-tags">
-                {{#each tags}}
-                <span>
-                    {{this}}
-                </span>
-                {{/each}}
-            </div>
-            <div class="note-actions">
-                <i class="fa fa-trash-o"></i>
-                <span>Delete</span>
-                <i class="fa fa-flag"></i>
-                <span>Report</span>
-            </div>
-        </div>
-    </div>
-</script>
-
-{% endverbatim %}
 <script type="text/javascript">
-    var notes = [{
-        id: 1,
-        name: 'BLOG 1',
-        summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit...',
-        noteText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit. Sed vitae volutpat ligula. Praesent congue ipsum ut metus pretium vestibulum. Phasellus at molestie turpis.',
-        teacher: 'Madam X',
-        date: '25 Dec 2015',
-        time: '3 PM',
-        views: '55',
-        likes: '125',
-        comments: '56',
-        tags: ['tag1', 'tag2'],
+    
 
-    },
-    {
-        id: 2,
-        name: 'BLOG 2',
-        summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit...',
-        noteText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit. Sed vitae volutpat ligula. Praesent congue ipsum ut metus pretium vestibulum. Phasellus at molestie turpis.',
-        teacher: 'Madam X',
-        date: '25 Dec 2015',
-        time: '3 PM',
-        views: '55',
-        likes: '125',
-        comments: '56',
-        tags: ['tag1', 'tag2'],
+    // $(function(){
+    //     var noteCardSource   = $("#note-card-temp").html();
+    //     var noteTemplate = Handlebars.compile(noteCardSource);
+    //     $("#note-card-cotainer").empty();
+    //     notes.forEach(function(note, pos){
+    //         //console.log(noteTemplate(note));
+    //         if(pos % 3 === 0) {
+    //             $('#note-card-cotainer').append('<div class="row"></div>');
+    //         }
+    //         $("#note-card-cotainer").find(".row:last-child").append(noteTemplate(note));
+    //     });
 
-    },
-    {
-        id: 3,
-        name: 'BLOG 3',
-        summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit...',
-        noteText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit. Sed vitae volutpat ligula. Praesent congue ipsum ut metus pretium vestibulum. Phasellus at molestie turpis.',
-        teacher: 'Madam X',
-        date: '25 Dec 2015',
-        time: '3 PM',
-        views: '55',
-        likes: '125',
-        comments: '56',
-        tags: ['tag1', 'tag2'],
+    //     var noteDetailsSource   = $("#note-card-exp-temp").html();
+    //     var noteDetailsTemplate = Handlebars.compile(noteDetailsSource);
 
-    },
-    {
-        id: 4,
-        name: 'BLOG 4',
-        summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit...',
-        noteText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel dapibus sem. Suspendisse non ex nulla. Pellentesque cursus, neque vitae sodales pellentesque, urna libero sagittis justo, vitae suscipit leo eros vitae velit. Vestibulum vitae euismod velit. Sed vitae volutpat ligula. Praesent congue ipsum ut metus pretium vestibulum. Phasellus at molestie turpis.',
-        teacher: 'Madam X',
-        date: '25 Dec 2015',
-        time: '3 PM',
-        views: '55',
-        likes: '125',
-        comments: '56',
-        tags: ['tag1', 'tag2'],
+    //     $("#note-card-cotainer").on('click', '.note-card', function(e){
+    //         e.stopPropagation();
+    //         $('div[data-note-id ^= note_]').closest('.row').remove();
+    //         var noteId = $(this).closest('.note-card').attr('data-note-id');
+    //         var noteObj = notes.filter(function(note){
+    //             console.log(note);
+    //             return note.id == noteId;
+    //         })[0];
+    //         var noteDetails = $('<div class="row note-expanded"></div>').append(noteDetailsTemplate(noteObj));
+    //         if(!$('div[data-note-id = note_' + noteObj.id + ']').length) {
+    //             $(this).closest('.row').after(noteDetails);
+    //         }
+    //     })
+    //     $("#note-card-cotainer").on('click', '.note-close', function(e){
+    //         e.stopPropagation();
+    //         $(this).closest('.row').remove();
+    //     });
+    // })
+    $('.notebook-index .notes').on('click', '.note', function() {
+        $(this).siblings().removeClass('active');
+        $(this).addClass('active');
+        node_id = $(this).attr('id')
+        $.ajax({
+          url: "{% url 'course_note_page' group_id %}",
 
-    }];
+          data: {
+            node_id: node_id
+          },
 
-    $(function(){
-        var noteCardSource   = $("#note-card-temp").html();
-        var noteTemplate = Handlebars.compile(noteCardSource);
-        $("#note-card-cotainer").empty();
-        notes.forEach(function(note, pos){
-            //console.log(noteTemplate(note));
-            if(pos % 3 === 0) {
-                $('#note-card-cotainer').append('<div class="row"></div>');
-            }
-            $("#note-card-cotainer").find(".row:last-child").append(noteTemplate(note));
+          type: "GET",
+
+          dataType: "html",
+
+          success: function(data){
+            $(".note-page").show().html(data);
+          },
+        });//end of ajax
+    });
+
+
+    $(function() {
+        // //New Note section
+        $("#newNoteModal").on('click', 'save-note', function() {
+            //Necessary ajax call
+        });
+        $("#newNoteModal").on('click', 'delete-note', function() {
+            //Necessary ajax call
+        });
+        $("#newNoteModal").on('click', 'publish-note', function() {
+        //     //Necessary ajax call
         });
 
-        var noteDetailsSource   = $("#note-card-exp-temp").html();
-        var noteDetailsTemplate = Handlebars.compile(noteDetailsSource);
 
-        $("#note-card-cotainer").on('click', '.note-card', function(e){
+        $(document).on('opened.fndtn.reveal', '#newNoteModal[data-reveal]', function (e) {
             e.stopPropagation();
-            $('div[data-note-id ^= note_]').closest('.row').remove();
-            var noteId = $(this).closest('.note-card').attr('data-note-id');
-            var noteObj = notes.filter(function(note){
-                console.log(note);
-                return note.id == noteId;
-            })[0];
-            var noteDetails = $('<div class="row note-expanded"></div>').append(noteDetailsTemplate(noteObj));
-            if(!$('div[data-note-id = note_' + noteObj.id + ']').length) {
-                $(this).closest('.row').after(noteDetails);
+            e.preventDefault();
+            if(!CKEDITOR.instances['textarea-add-note']){
+                CKEDITOR.replaceAll('textarea-add-note',{
+                    enterMode : 'GeneralToolbar', //override default behaviour that adds <p></p> in ck editor
+                    toolbar:'basic',
+                    uiColor:'#f2f2f2',
+                    textarea_id: 'textarea-add-note'
+                });
             }
-        })
-        $("#note-card-cotainer").on('click', '.note-close', function(e){
-            e.stopPropagation();
-            $(this).closest('.row').remove();
         });
-    })
-    // $('.notebook-index .notes').on('click', '.note', function() {
-    //     $(this).siblings().removeClass('active');
-    //     $(this).addClass('active');
-    //     node_id = $(this).attr('id')
-    //     $.ajax({
-    //       url: "{% url 'course_note_page' group_id %}",
+        $(document).on('closed.fndtn.reveal', '#newNoteModal[data-reveal]', function () {
+            if (CKEDITOR.instances['textarea-add-note']) {
+                CKEDITOR.instances['textarea-add-note'].destroy(true);
+            }
+        });
 
-    //       data: {
-    //         node_id: node_id
-    //       },
-
-    //       type: "GET",
-
-    //       dataType: "html",
-
-    //       success: function(data){
-    //         $(".note-page").show().html(data);
-    //       },
-    //     });//end of ajax
-    // });
-
-
-    // $(function() {
-    //     // //New Note section
-    //     // $("#newNoteModal").on('click', 'save-note', function() {
-    //     //     //Necessary ajax call
-    //     // });
-    //     // $("#newNoteModal").on('click', 'delete-note', function() {
-    //     //     //Necessary ajax call
-    //     // });
-    //     // $("#newNoteModal").on('click', 'publish-note', function() {
-    //     //     //Necessary ajax call
-    //     // });
-
-
-    //     // $(document).on('opened.fndtn.reveal', '#newNoteModal[data-reveal]', function (e) {
-    //     //     e.stopPropagation();
-    //     //     e.preventDefault();
-    //     //     if(!CKEDITOR.instances['textarea-add-note']){
-    //     //         CKEDITOR.replaceAll('textarea-add-note',{
-    //     //             enterMode : 'GeneralToolbar', //override default behaviour that adds <p></p> in ck editor
-    //     //             toolbar:'basic',
-    //     //             uiColor:'#f2f2f2',
-    //     //             textarea_id: 'textarea-add-note'
-    //     //         });
-    //     //     }
-    //     // });
-    //     // $(document).on('closed.fndtn.reveal', '#newNoteModal[data-reveal]', function () {
-    //     //     if (CKEDITOR.instances['textarea-add-note']) {
-    //     //         CKEDITOR.instances['textarea-add-note'].destroy(true);
-    //     //     }
-    //     // });
-
-    //     //Rating system
-    // });
+        //Rating system
+    });
 
     $("body").on('mouseenter', '.rate-scale i', function() {
         $(this).nextAll().add($(this)).addClass('hover-rating');
