--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
@@ -19,57 +19,126 @@
   <font size="3"> <input type="textbox" name="{{fields_name}}" value="{{fields_value|join:', '|default_if_none:''}}"></font>
 </div>
 
-{% else %}
-
-    {% if fields_type == "bool" %}
-    <select id="id_auto_now_add" name="{{fields_name}}" style="width:50%">
-      <option value="0">{% trans "Unknown" %}</option>
-      <option value="1" {% if fields_value == 1 %}selected{% endif %} >{% trans "Yes" %}</option>
-      <option value="2" {% if fields_value == 2 %}selected{% endif %} >{% trans "No" %}</option>
-    </select>
+{% endif %}
 
 
-    <div class="medium-3 columns end">
-    {% elif fields_type == "datetime.datetime" or fields_type == "datetime" %}
-    <input id="{{fields_name}}" class="date_month_day_year" type="text" placeholder="DD/MM/YYYY" value="" name="{{fields_name}}" readonly="" >
-
-    </div>
-
-    <script type="text/javascript">
-    $(document).ready(function () {
-        {% if start_time %}
-            var start_date  = document.getElementById("start_date");
-            start_date.value = "{{start_time|date:'d/m/Y'}}";
-        {% elif end_time %}
-            var end_date  = document.getElementById("end_date");
-            end_date.value = "{{end_time|date:'d/m/Y'}}";
-        {% endif %}
-    })
-
-      // Start-date & End-date settings -------------------------------------------
-    var start_date = $("#start_date");
-    var end_date = $("#end_date");
-    currentDate = new Date();
-    var currentDay = currentDate.getDate();
-    var currentMonth = currentDate.getMonth();
-    var currentYear = currentDate.getFullYear();
   
-    $(".date_month_day_year").datepicker({
-      changeMonth: true,
-      dateFormat: 'dd/mm/yy',
-      minDate: '0',
-      maxDate: '+2m',
-      defaultDate: '0',
+{% if gs_type == 'attribute_set' %}
 
-      onClose: function(dateText, inst) {
-        $(this).val(dateText);
-        
-        var month_year = $(this).val();
-        day = currentDay;
-        month = currentMonth;
-        year = currentYear;
-        
-        if ($(this).attr('id') == "start_date") {
+      {% if fields_type == "bool" %}
+      <select id="id_auto_now_add" name="{{fields_name}}" style="width:50%">
+        <option value="0">{% trans "Unknown" %}</option>
+        <option value="1" {% if fields_value == 1 %}selected{% endif %} >{% trans "Yes" %}</option>
+        <option value="2" {% if fields_value == 2 %}selected{% endif %} >{% trans "No" %}</option>
+      </select>
+
+
+      <div class="medium-3 columns end">
+      {% elif fields_type == "datetime.datetime" or fields_type == "datetime" %}
+      <input id="{{fields_name}}" class="date_month_day_year" type="text" placeholder="DD/MM/YYYY" value="" name="{{fields_name}}" readonly="" >
+
+      </div>
+
+      <script type="text/javascript">
+      $(document).ready(function () {
+          {% if start_time %}
+              var start_date  = document.getElementById("start_date");
+              start_date.value = "{{start_time|date:'d/m/Y'}}";
+          {% elif end_time %}
+              var end_date  = document.getElementById("end_date");
+              end_date.value = "{{end_time|date:'d/m/Y'}}";
+          {% endif %}
+      })
+
+        // Start-date & End-date settings -------------------------------------------
+      var start_date = $("#start_date");
+      var end_date = $("#end_date");
+      currentDate = new Date();
+      var currentDay = currentDate.getDate();
+      var currentMonth = currentDate.getMonth();
+      var currentYear = currentDate.getFullYear();
+    
+      $(".date_month_day_year").datepicker({
+        changeMonth: true,
+        dateFormat: 'dd/mm/yy',
+        minDate: '0',
+        maxDate: '+2m',
+        defaultDate: '0',
+
+        onClose: function(dateText, inst) {
+          $(this).val(dateText);
+          
+          var month_year = $(this).val();
+          day = currentDay;
+          month = currentMonth;
+          year = currentYear;
+          
+          if ($(this).attr('id') == "start_date") {
+            if (month_year) {
+              month_year = month_year.split("/");
+              day = parseInt(month_year[0]);
+              month = parseInt(month_year[1]);
+              year = parseInt(month_year[2]);
+            }
+
+            if (end_date.val() != '') {
+              var testStartDate = start_date.datepicker('getDate');
+              var testEndDate = end_date.datepicker('getDate');
+
+              if (testStartDate > testEndDate) {
+                end_date.datepicker('setDate', testStartDate);
+              }
+
+              else {
+                $(this).val(day+"/"+month+"/"+year);
+                $(this).datepicker('setDate', new Date(year, (month-1), day));
+              }
+            }
+
+            else {
+              end_date.val(day+"/"+month+"/"+year);
+              $(this).datepicker('setDate', new Date(year, (month-1), day));
+            }
+
+            $("#end_date").datepicker('option', 'minDate', new Date(year, (month-1), day));
+          }
+
+          else if ($(this).attr('id') == "end_date") {
+            if (month_year) {
+              month_year = month_year.split("/");
+              day = parseInt(month_year[0]);
+              month = parseInt(month_year[1]);
+              year = parseInt(month_year[2]);
+            }
+
+            if (start_date.val() != '') {
+              var testStartDate = start_date.datepicker('getDate');
+              var testEndDate = end_date.datepicker('getDate');
+
+              if (testStartDate > testEndDate) {
+                start_date.datepicker('setDate', testEndDate);
+              }
+
+              else {
+                $(this).val(day+"/"+month+"/"+year);
+                $(this).datepicker('setDate', new Date(year, (month-1), day));
+              }
+            }
+
+            else {
+              start_date.val(day+"/"+month+"/"+year);
+
+              $(this).datepicker('setDate', new Date(year, (month-1), day));
+            }
+          }
+        },
+
+        beforeShow: function() {
+          var month_year = $(this).val();
+          day = currentDay;
+          month = currentMonth;
+          year = currentYear;
+
           if (month_year) {
             month_year = month_year.split("/");
             day = parseInt(month_year[0]);
@@ -77,211 +146,159 @@
             year = parseInt(month_year[2]);
           }
 
-          if (end_date.val() != '') {
-            var testStartDate = start_date.datepicker('getDate');
-            var testEndDate = end_date.datepicker('getDate');
+          $(this).datepicker('option', 'defaultDate', new Date(year, (month-1), day));
+          $(this).datepicker('setDate', new Date(year, (month-1), day));
+        },
+      });
 
-            if (testStartDate > testEndDate) {
-              end_date.datepicker('setDate', testStartDate);
-            }
-
-            else {
-              $(this).val(day+"/"+month+"/"+year);
-              $(this).datepicker('setDate', new Date(year, (month-1), day));
-            }
-          }
-
-          else {
-            end_date.val(day+"/"+month+"/"+year);
-            $(this).datepicker('setDate', new Date(year, (month-1), day));
-          }
-
-          $("#end_date").datepicker('option', 'minDate', new Date(year, (month-1), day));
-        }
-
-        else if ($(this).attr('id') == "end_date") {
-          if (month_year) {
-            month_year = month_year.split("/");
-            day = parseInt(month_year[0]);
-            month = parseInt(month_year[1]);
-            year = parseInt(month_year[2]);
-          }
-
-          if (start_date.val() != '') {
-            var testStartDate = start_date.datepicker('getDate');
-            var testEndDate = end_date.datepicker('getDate');
-
-            if (testStartDate > testEndDate) {
-              start_date.datepicker('setDate', testEndDate);
-            }
-
-            else {
-              $(this).val(day+"/"+month+"/"+year);
-              $(this).datepicker('setDate', new Date(year, (month-1), day));
-            }
-          }
-
-          else {
-            start_date.val(day+"/"+month+"/"+year);
-
-            $(this).datepicker('setDate', new Date(year, (month-1), day));
-          }
-        }
-      },
-
-      beforeShow: function() {
-        var month_year = $(this).val();
-        day = currentDay;
-        month = currentMonth;
-        year = currentYear;
-
-        if (month_year) {
-          month_year = month_year.split("/");
-          day = parseInt(month_year[0]);
-          month = parseInt(month_year[1]);
-          year = parseInt(month_year[2]);
-        }
-
-        $(this).datepicker('option', 'defaultDate', new Date(year, (month-1), day));
-        $(this).datepicker('setDate', new Date(year, (month-1), day));
-      },
-    });
-
-    </script>
+      </script>
 
 
-    {% elif fields_type == "status" %}
-    <select id="id_auto_now_add" name="{{fields_name}}" style="width:60%">
-      <option value="PUBLISHED" {% if fields_value == "PUBLISHED" %}selected{% endif %} >{% trans "PUBLISHED" %}</option>
-      <option value="DRAFT" {% if fields_value == "DRAFT" %}selected{% endif %} >{% trans "DRAFT" %}</option>
-      <option value="HIDDEN" {% if fields_value == "HIDDEN" %}selected{% endif %} >{% trans "HIDDEN" %}</option>
+      {% elif fields_type == "status" %}
+      <select id="id_auto_now_add" name="{{fields_name}}" style="width:60%">
+        <option value="PUBLISHED" {% if fields_value == "PUBLISHED" %}selected{% endif %} >{% trans "PUBLISHED" %}</option>
+        <option value="DRAFT" {% if fields_value == "DRAFT" %}selected{% endif %} >{% trans "DRAFT" %}</option>
+        <option value="HIDDEN" {% if fields_value == "HIDDEN" %}selected{% endif %} >{% trans "HIDDEN" %}</option>
+      </select>
+
+      {% elif fields_type == "int" or fields_type == "float" or fields_type == "long" %}
+      <div style="display:table-cell;">
+        <font size="3"> <input type="number" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}"></font>
+      </div>
+
+      {% elif fields_type == "list" %}
+      <div id="{{fields_name}}" style="border-spacing:0px" class="list_drawer">
+        {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
+      </div>
+
+      {% elif fields_type == "dict" %}
+      <div id="{{fields_name}}" style="border-spacing:0px" class="dict_drawer">
+        {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
+      </div>
+
+      {% elif fields_type == "IS()" %}
+      <div id="is_drawer" style="border-spacing:0px" class="list_drawer">
+        <select name="{{fields_name}}">
+          <option value="">select</option>
+          {% for value in complex_dt %}
+          <option value="{{value}}"> {{value}} </option>
+          {% endfor %}
+        </select>
+      </div>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      {% elif fields_type == "unicode" or fields_type == "basestring" %}
+
+        {% if fields_name == "Location" %}
+
+          <div class="row">
+            <div class="large-8 columns">
+                <a href="#view-map-edit-widget" data-reveal-id="view-map-edit-widget" title="Click to add location markers" class="tiny secondary button radius expand">
+                <i class="fi-marker"></i> &nbsp; {% trans "Add Location" %}
+                </a>
+            </div>
+          </div>
+          <div class="content reveal-modal graph-div" id="view-map-edit-widget" data-reveal>    
+            <!-- #{#% #if '/edit/' in request.path  or '/image_detail/' in request.path  or '/video_detail/' in request.path%} -->
+              <a class="close-reveal-modal" >&#215;</a>
+              {% include "ndf/map_widget.html" with mode="edit" %}
+              <!-- <div style="background-color:gray; width:100%; height:80%;"></div> -->
+            <!-- #{#%# endif %} -->
+          </div>
+
+          <script type="text/javascript">
+              $(document).on('open', '#view-map-edit-widget[data-reveal]', function () {  
+      
+                $.ajax({
+                  url: "{% url 'get_visited_location' groupid %}",
+                  success: function(data){ 
+             
+                    data = JSON.parse(data);
+
+                    var lastVisitedLocationVal = data;
+                    
+                    if(lastVisitedLocationVal){
+
+                      if(lastVisitedLocationVal == "[]"){
+                        lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
+                      }
+
+                      if(lastVisitedLocationVal.length > 0){
+                            // lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
+                            var zoom = lastVisitedLocationVal.pop(),
+                                lng = lastVisitedLocationVal[1],
+                                lat = lastVisitedLocationVal[0];
+                              map.setView([lat, lng], zoom);
+                            }
+                    }
+                    else if( tempArr.length )
+                    {
+                      var group = new L.featureGroup(tempArr)
+                          map.fitBounds(group.getBounds());
+                    }
+                   
+                }
+              });
+
+              });
+              $(document).on('opened', '#view-map-edit-widget[data-reveal]', function () {  
+              
+                map.invalidateSize();  
+              });
+
+          </script>
+          
+
+
+        {% else %}
+        <input type="text" id="{{fields_name}}" name="{{fields_name}}"   />
+        
+        {% endif %}
+
+
+
+
+
+
+
+  {# {{ fields_name }} #}
+  {# {{ fields_type }} #}
+
+  {% endif %}
+{% elif gs_type == 'relation_set' %}
+
+  
+    <select name="{{fields_name}}">
+    <option value="">select</option>
+    {% for value in fields_object_type %}
+
+    <option value="{{value}}"> {{value}} </option>
+
+    {% endfor %}
     </select>
 
-    {% elif fields_type == "int" or fields_type == "float" or fields_type == "long" %}
-    <div style="display:table-cell;">
-      <font size="3"> <input type="number" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}"></font>
-    </div>
-
-    {% elif fields_type == "list" %}
-    <div id="{{fields_name}}" style="border-spacing:0px" class="list_drawer">
-      {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
-    </div>
-
-    {% elif fields_type == "dict" %}
-    <div id="{{fields_name}}" style="border-spacing:0px" class="dict_drawer">
-      {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
-    </div>
-
-    {% elif fields_type == "IS()" %}
-    <div id="is_drawer" style="border-spacing:0px" class="list_drawer">
-      <select name="{{fields_name}}">
-        <option value="">select</option>
-        {% for value in complex_dt %}
-        <option value="{{value}}"> {{value}} </option>
-        {% endfor %}
-      </select>
-    </div>
-      
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    {% elif fields_type == "unicode" or fields_type == "basestring" %}
-
-      {% if fields_name == "Location" %}
-
-        <div class="row">
-          <div class="large-8 columns">
-              <a href="#view-map-edit-widget" data-reveal-id="view-map-edit-widget" title="Click to add location markers" class="tiny secondary button radius expand">
-              <i class="fi-marker"></i> &nbsp; {% trans "Add Location" %}
-              </a>
-          </div>
-        </div>
-        <div class="content reveal-modal graph-div" id="view-map-edit-widget" data-reveal>    
-          <!-- #{#% #if '/edit/' in request.path  or '/image_detail/' in request.path  or '/video_detail/' in request.path%} -->
-            <a class="close-reveal-modal" >&#215;</a>
-            {% include "ndf/map_widget.html" with mode="edit" %}
-            <!-- <div style="background-color:gray; width:100%; height:80%;"></div> -->
-          <!-- #{#%# endif %} -->
-        </div>
-
-        <script type="text/javascript">
-            $(document).on('open', '#view-map-edit-widget[data-reveal]', function () {  
-    
-              $.ajax({
-                url: "{% url 'get_visited_location' groupid %}",
-                success: function(data){ 
-           
-                  data = JSON.parse(data);
-
-                  var lastVisitedLocationVal = data;
-                  
-                  if(lastVisitedLocationVal){
-
-                    if(lastVisitedLocationVal == "[]"){
-                      lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
-                    }
-
-                    if(lastVisitedLocationVal.length > 0){
-                          // lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
-                          var zoom = lastVisitedLocationVal.pop(),
-                              lng = lastVisitedLocationVal[1],
-                              lat = lastVisitedLocationVal[0];
-                            map.setView([lat, lng], zoom);
-                          }
-                  }
-                  else if( tempArr.length )
-                  {
-                    var group = new L.featureGroup(tempArr)
-                        map.fitBounds(group.getBounds());
-                  }
-                 
-              }
-            });
-
-            });
-        $(document).on('opened', '#view-map-edit-widget[data-reveal]', function () {  
-        
-          map.invalidateSize();  
-        });
-
-        </script>
-
-
-
-      {% else %}
-      <input type="text" id="{{fields_name}}" name="{{fields_name}}"   />
-      
-      {% endif %}
-
-
-
-
-    {% endif %}
-
-
-
-{# {{ fields_name }} #}
-{# {{ fields_type }} #}
 
 {% endif %}
