--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ebook.html
@@ -10,19 +10,39 @@
 <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/slick-carousel/slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="/static/ndf/css/open-sans-bold-font.css">
 <script type="text/javascript" src="/static/ndf/bower_components/slick-carousel/slick/slick.min.js"></script>
+
+<style>
+.top-gap
+{
+margin-top:15px;
+}
+.theme-panel
+{
+    background-color: #ddd;
+    padding: 0.85rem;
+    margin-top: 1em;
+    border: 1px solid #c3ecfe;
+}
+.filter-body
+{
+margin-top:5px;
+}
+</style>
+
 {% endblock head %}
 
 {% block meta_content %}
 
   {% get_ebook_help_text as ebook_help_text_url %}
   {% blocktrans %} 
-    <p class="text-justify subheader">Each eBook is a collection of chapter files.
-    </p> 
+<div class="theme-panel">
+    <div class="text-justify subheader">Each eBook is a collection of chapter files.
+    </div> 
   {% endblocktrans %}
-  <p>
+  <div>
     <a href="{{ebook_help_text_url}}" target="_blank">How to read eBooks</a>  
-  </p>
-
+  </div>
+</div>
 {% endblock %}
 
 
@@ -59,7 +79,7 @@
 
 {% block body_content %}
 <a href="{% url 'e-book' group_name_tag %}" title="Click to go to ebooks">
-    <div class="large-4 columns repository-title" style="margin-bottom:0.5em;">
+    <div class="large-4 columns repository-title top-gap" >
       {% if ebook_gst.altnames and ebook_gst.altnames != "None" %}
         {{ebook_gst.altnames}}
       {% else %}
@@ -67,7 +87,7 @@
       {% endif%}
     </div>
   </a>
-  <div class="large-8 columns repository-desc">{{ebook_gst.content_org|default_if_none:""|safe}}</div>
+  <div class="large-8 columns repository-desc top-gap">{{ebook_gst.content_org|default_if_none:""|safe}}</div>
 
   {% get_filters_data "E-Book" as filter_dict %}
   {% include "ndf/filters.html" with filter_dict=filter_dict %}
