--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/collection_ajax_view.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/collection_ajax_view.html
@@ -114,7 +114,7 @@
                 },
                 success: function(data) {
                   if (node_type == "Group"){
-                   window.history.pushState("", "", "/{{group_name_tag}}/page/{{node.pk}}"+"?selected="+node.id+"");
+                   window.history.pushState("", "", "/{{group_name_tag}}/"+"?selected="+node.id+"");
                     $(".view_page_link").trigger('click')
                   }
                   else if (node_type == "Page"){
